Updated index.html with meta information

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Simple Counter</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Simple Counter - Keep track of your count quickly and easily</title>
+		<meta name="description" content="Quickly and easily keep track of a count with add one and subtract one buttons, a reset button, and the option to start at any number">
+		<meta name="keywords" content="count, counter, online count, online counter, counter reset, counter custom start">
 		<link href="https://fonts.googleapis.com/css?family=Roboto+Mono:700" rel="stylesheet">
 		<link rel="stylesheet" href="./css/main.css" type="text/css"/>
 		<link rel="icon" href="./img/favicon.png">
