Change input type of screen to number

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<h1>Simple Counter</h1>
 			<div id="counterForm">
 				<button type="button" id="minusOne" name="minusOne" class="counterFunc" onclick="increment('-')">-</button>
-				<input id="screen" onchange="screenChange()">
+				<input id="screen" type="number" onchange="screenChange()">
 				<button type="button" id="plusOne" name="plusOne" class="counterFunc" onclick="increment('+')">+</button>
 				<button type="button" id="resetVal" name="resetVal" onclick="reset()">Reset</button>
 				<input type="number" id="startVal" name="startVal" value="" placeholder="Starting number" >
