Add html for count by

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 				<button type="button" id="resetVal" name="resetVal" onclick="reset()">Reset</button>
 				<input type="number" id="startVal" name="startVal" value="" placeholder="Starting number" >
 				<button type="button" id="startValButton" name="button" onclick="startAt()">Start</button>
+				<div id="count" class="row">
+					<label for="countByField">Count by</label>
+					<input id="countByField" type="number" name="" value="1">
+				</div>
 			</div>
 		</div>
 		<footer id="mainFooter"><a href="http://seanmcp.com"><img src="./img/logo-whiteout.png" alt="&copy; Sean McPherson" title ="&copy; Sean McPherson"/></a>
