Initialize countBy to 1 and store in localStorage

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<button type="button" id="startValButton" name="button" onclick="startAt()">Start</button>
 				<div id="count" class="row">
 					<label for="countByField">Count by</label>
-					<input id="countByField" type="number" name="" value="1">
+					<input id="countByField" type="number" name="" value="">
 				</div>
 			</div>
 		</div>
