Add html and style for quick count by buttons

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
 				<button type="button" id="startValButton" name="button" onclick="startAt()">Start</button>
 				<div id="count" class="row">
 					<label for="countByField">Count by</label>
-					<input id="countByField" type="number" name="" value="">
+					<input id="countByField" type="number" name="" value="" onchange="countByChange()">
+					<span class="countDefault">1</span>
+					<span class="countDefault">2</span>
+					<span class="countDefault">3</span>
 				</div>
 			</div>
 		</div>
